# MCP-LMS-OSS

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md
docker/: .env.example  docker-compose.yml
docker/keycloak/: configure_dcr.py  mcp-lms-realm.json
docker/seed/: seed_phase1.php  seed_phase1_content.php  seed_phase4.php
docs/briefs/: README.md  blog-1a-what-is-mcp.md  phase-3-building-an-mcp-server.md  phase-4-rbac-in-mcp.md  phase-5-mcp-auth-done-right.md  phase-6-securing-an-mcp-server.md
docs/screenshots/: README.md
mcp_server/: README.md  pyproject.toml
mcp_server/src/moodle_mcp/: auth.py  gating.py  moodle_client.py  oauth.py  prompts.py  quiz_parser.py  resources.py  safety.py  server.py
mcp_server/src/moodle_mcp/tools/: creator.py  learner.py  sampling.py
mcp_server/tests/: test_dcr_flow.py  test_http_multiuser.py  test_oauth.py  test_quiz_parser.py  test_rbac.py  test_sampling.py  test_stdio_smoke.py
notes/: api-cheatsheet.md  phase-1-seed-plan.md  security-notes.md
notes/scripts/: quiz_attempt_demo.py
scripts/demo/: sampling_demo.py
scripts/screenshots/: phase4_rbac_shots.mjs  phase4_render_session.mjs  phase5_connected_shot.mjs  phase5_oauth_shots.mjs  phase6_sampling_shot.mjs  take_screenshots.mjs
