[project]
name = "moodle-mcp"
version = "0.1.0"
description = "MCP server exposing a self-hosted Moodle LMS as role-gated tools, resources, and prompts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyjwt[crypto]>=2.8",
]

[project.scripts]
moodle-mcp = "moodle_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moodle_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
